<resources>
    <string name="app_name">submission</string>
    <string name="title">Ramai-Do</string>
    <string name="slogan">The Movie Catalogue</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="loading_bar_film">Loading Please Wait</string>
    <string name="title_card">title</string>
    <string name="date_card">date</string>
    <string name="rating_card">0.0</string>
    <string name="max_rating_card">/10</string>
    <string name="language_card">language</string>
    <string name="search">search</string>
</resources>